// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> should render when positioned to Right: Closed Menu 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  min-width: 140px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 15px;
  box-shadow: none;
}

<div>
  <button
    aria-controls="menu--7"
    aria-haspopup="true"
    class="c0"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--7"
    type="button"
  >
    Actions 
  </button>
</div>
`;

exports[`<Menu /> should render when positioned to Right: Open Menu 1`] = `
<div>
  <button
    aria-controls="menu--7"
    aria-haspopup="true"
    class="sc-dIvrsQ jSOwKS"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--7"
    type="button"
  >
    Actions 
  </button>
</div>
`;

exports[`<Menu /> should render: Closed Menu 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  min-width: 140px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 15px;
  box-shadow: none;
}

<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="c0"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--1"
    type="button"
  >
    Actions 
  </button>
</div>
`;

exports[`<Menu /> should render: Open Menu 1`] = `
<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="sc-dIvrsQ jSOwKS"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--1"
    type="button"
  >
    Actions 
  </button>
</div>
`;
